--- a/src/jquery.remodal.css
+++ b/src/jquery.remodal.css
@@ -55,6 +55,17 @@ html.remodal_lock, body.remodal_lock {
     display: inline-block;
 }
 
+/* Remodal anti-zoom. Font-size should be >= 16px. */
+
+.remodal select,
+.remodal textarea,
+.remodal input,
+.remodal select:focus,
+.remodal textarea:focus,
+.remodal input:focus {
+    font-size: 16px;
+}
+
 /* ==========================================================================
    Remodal default theme
    ========================================================================== */
