Convert image for IE8 to base64

--- a/src/jquery.remodal.css
+++ b/src/jquery.remodal.css
@@ -281,9 +281,8 @@ html.lt-ie9 body {
     margin: 0;
 }
 
-
 .lt-ie9 .remodal-overlay {
-    background: url(img/overlay-ie8.png);
+    background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABQAAAAUAQMAAAC3R49OAAAAA3NCSVQICAjb4U/gAAAABlBMVEX///8AAABVwtN+AAAAAnRSTlMAuyogpzwAAAAJcEhZcwAACxIAAAsSAdLdfvwAAAAcdEVYdFNvZnR3YXJlAEFkb2JlIEZpcmV3b3JrcyBDUzbovLKMAAAAGHRFWHRDcmVhdGlvbiBUaW1lADA2LzEwLzIwMTSCx1nsAAAAD0lEQVQImWP4//8DAxUxACnDOpkfX95WAAAAAElFTkSuQmCC);
 }
 
 .lt-ie9 .remodal {
