--- a/src/jquery.remodal.css
+++ b/src/jquery.remodal.css
@@ -272,7 +272,7 @@ body.remodal-is-active .remodal {
 /* Media queries
    ========================================================================== */
 
-@media only screen and (min-width: 40.063em) /* min-width 641px */ {
+@media only screen and (min-width: 641px) {
     .remodal {
         max-width: 700px;
         min-height: 0;
