--- a/src/remodal-default-theme.css
+++ b/src/remodal-default-theme.css
@@ -93,7 +93,8 @@
   background: transparent;
 }
 
-.remodal-close:hover {
+.remodal-close:hover,
+.remodal-close:focus {
   color: #2b2e38;
 }
 
@@ -142,7 +143,8 @@
   background: #81c784;
 }
 
-.remodal-confirm:hover {
+.remodal-confirm:hover,
+.remodal-confirm:focus {
   background: #66bb6a;
 }
 
@@ -151,14 +153,16 @@
   background: #e57373;
 }
 
-.remodal-cancel:hover {
+.remodal-cancel:hover,
+.remodal-cancel:focus {
   background: #ef5350;
 }
 
 /* Remove inner padding and border in Firefox 4+ for the button tag. */
 
 .remodal-confirm::-moz-focus-inner,
-.remodal-cancel::-moz-focus-inner {
+.remodal-cancel::-moz-focus-inner,
+.remodal-close::-moz-focus-inner {
   padding: 0;
 
   border: 0;
