--- a/src/remodal-default-theme.css
+++ b/src/remodal-default-theme.css
@@ -181,6 +181,7 @@
   }
   to {
     transform: none;
+    filter: blur(0);
 
     opacity: 1;
   }
@@ -194,6 +195,7 @@
   }
   to {
     transform: scale(0.95);
+    filter: blur(0);
 
     opacity: 0;
   }
